tests/idris2/interface008/expected
1/1: Building Deps (Deps.idr)
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  card is shadowing Main.card

Deps:15:3--15:8
 11 |   to = id
 12 | 
 13 | interface BadFinite t where
 14 |   badcard   : Nat
 15 |   badto     : t -> Fin card
        ^^^^^

Error: While processing right hand side of badcard. k is not accessible in this context.

Deps:18:13--18:14
 14 |   badcard   : Nat
 15 |   badto     : t -> Fin card
 16 | 
 17 | implementation BadFinite (Fin k) where
 18 |   badcard = k
                  ^

